Add useful link management actions
